--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap');
+
 body{
     padding: 15px;
     text-align: center;
+    font-family: "Ojuju", sans-serif;
+    letter-spacing: 2px;
 }
 h1{
     margin: 50px 0px; 
+}
+h2{
+    font-weight: 400 !important;
+}
+#coloredheading{
+    width: 100%;
+    height: 30px;
+    background-color: rgb(215, 158, 84);
+    border: 15px solid salmon;
 }
