--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body{
     padding: 15px;
     text-align: center;
+    align-items: center;
     font-family: "Ojuju", sans-serif;
     letter-spacing: 2px;
 }
@@ -14,7 +15,34 @@ h2{
 }
 #coloredheading{
     width: 100%;
-    height: 30px;
+    height: 120px;
+    position: relative;
     background-color: rgb(215, 158, 84);
-    border: 15px solid salmon;
 }
+
+
+/* NAV BAR! */
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
