--- a/style.css
+++ b/style.css
@@ -1,54 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap");
 
-body{
-    padding: 15px;
-    text-align: center;
-    align-items: center;
-    font-family: "Ojuju", sans-serif;
-    letter-spacing: 2px;
-    background-color: #FCFCF2;
+body {
+  padding: 15px;
+  text-align: center;
+  align-items: center;
+  font-family: "Ojuju", sans-serif;
+  letter-spacing: 2px;
+  background-color: #fcfcf2;
 }
-h1{
-    margin: 50px 0px; 
+h1 {
+  margin: 50px 0px;
 }
-h2{
-    font-weight: 400 !important;
+h2 {
+  font-weight: 400 !important;
 }
-#coloredheading{
-    width: 100%;
-    height: 120px;
-    position: relative;
-    background-color: rgb(215, 158, 84);
-    background-image: url("./pictures/backgrounndleaf2.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-
+#coloredheading {
+  width: 100%;
+  height: 120px;
+  position: relative;
+  background-color: rgb(215, 158, 84);
+  background-image: url("./pictures/backgrounndleaf2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
-
 
 /* NAV BAR! */
 
 .topnav {
-    overflow: hidden;
-    background-color: #333;
-    border-radius: 5px;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #FCFCF2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #FCFCF2;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #B6CAA9;
-    color: #FCFCF2;
-  }
+  overflow: hidden;
+  background-color: #333;
+  border-radius: 5px;
+}
+
+.topnav a {
+  float: left;
+  color: #fcfcf2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #fcfcf2;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #b6caa9;
+  color: #fcfcf2;
+}
